# manim-pro

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  redis.conf
src/: config.py  database.py  gemini_service.py  helper_service.py  minimal_surface.py  moving_square.py  redis_client.py  routes.py  schemas.py  service.py  tts_service.py  utilities.py
