[project]
name = "manimpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "google-generativeai>=0.8.5",
    "manim>=0.19.1",
    "manimgl>=1.7.2",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
]
