[project]
name = "manimpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "google-generativeai>=0.8.5",
    "librosa>=0.11.0",
    "manim>=0.19.1",
    "manimgl>=1.7.2",
    "numpy>=2.3.5",
    "onnxruntime==1.23.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.38.0",
]
