[project]
name = "manimpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.6",
    "google-generativeai==0.8.3",
    "librosa==0.10.2.post1",
    "manim==0.18.1",
    "manimgl==1.7.2",
    "numpy==1.26.4",
    "onnxruntime==1.20.1",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "soundfile==0.12.1",
    "uvicorn[standard]==0.34.0",
]
